@@ -1,6 +1,6 @@
 .TH "Relational" "1" 
 .SH "NAME" 
-relational \(em .Python implementation of Relational algebra. 
+relational \(em Python implementation of Relational algebra. 
 .SH "SYNOPSIS" 
 .PP 
 \fBrelational\fR [\-v\fR\fP]
